<resources>
  <string name="app_name">PureReader</string>
  
  <string name="nav_timeline">干货</string>
  <string name="nav_girls">妹子</string>
  <string name="nav_favorite">收藏</string>
  <string name="nav_info">关于</string>
  <string name="title_gank">干货集中营</string>
  
  <string name="category_all">All</string>
  <string name="category_android">Android</string>
  <string name="category_ios">iOS</string>
  <string name="category_web_font">前端</string>
  <string name="category_app">App</string>
  <string name="category_recommend">瞎推荐</string>
  <string name="category_resource">拓展资源</string>
  <string name="category_video">休息视频</string>
  <string name="category_welfare">福利</string>
  
  <string name="empty_girl">哎呀, 没有发现新的妹子…</string>
  <string name="empty_content">哎呀, 今天没有发干货…</string>
  <string name="error_content">哎呀, 内容走丢了…</string>
  <string name="no_browser_found">没有安装浏览器</string>
  <string name="empty_favorite">这里啥也没有, 快去收藏吧!</string>
  <string name="action_copy_link">复制链接</string>
  <string name="action_open_in_browser">在浏览器打开</string>
  <string name="action_share">分享</string>
  <string name="something_wrong">发生了一点小意外…</string>
  <string name="share_to">分享至</string>
  <string name="copied_to_clipboard">已复制到剪贴板</string>
  <string name="share_failed">分享失败</string>
  <string name="btn_cancel">取消</string>
  <string name="btn_ok">确定</string>
  <string name="title_girl">妹子</string>
  
  <string name="menu_share">分享</string>
  <string name="menu_save">保存</string>
  <string name="search_hint">Search</string>
  
  <!--info fragment-->
  <string name="settings">设置</string>
  <string name="no_picture_mode">无图模式</string>
  <string name="no_image_mode_desc">显示文章内容时不加载图片</string>
  <string name="in_app_browser">Chrome Custom Tabs</string>
  <string name="in_app_browser_desc">使用Chrome Custom Tabs打开链接</string>
  <string name="night_mode">夜间模式</string>
  <string name="clear_image_cache">清除图片缓存</string>
  <string name="clear_image_cache_successfully">缓存已被成功清除</string>
  <string name="about">关于</string>
  <string name="version">版本: V</string>
  <!--<string name="rate">为应用评分</string>-->
  <string name="author">作者</string>
  <string name="author_page">个人主页</string>
  <string name="author_page_desc">https://lecymeng.github.io</string>
  <string name="follow_me_on_github">在GitHub关注我</string>
  <string name="follow_me_on_github_desc">https://github.com/lecymeng</string>
  <string name="support">支持</string>
  <string name="source_code">源代码</string>
  <string name="source_code_desc">https://github.com/lecymeng/PureReader</string>
  <string name="feedback">反馈Bug / 建议</string>
  <string name="feedback_desc">帮助我改进PureReader</string>
  <string name="sendto">mailto:lecymeng@outlook.com</string>
  <string name="mail_topic">PureReader使用反馈与建议</string>
  <string name="device_model">设备型号:</string>
  <string name="sdk_version">SDK版本:</string>
  <string name="no_mail_app">没有安装邮件类应用</string>
  <string name="open_source_licenses">开源许可证</string>
  <string name="action_refresh">Refresh</string>
  <string name="title_search">搜索</string>
  <string name="text_category">分类: %s</string>
  <string name="btn_history_gank">历史干货</string>
  <string name="title_search_history">搜索历史</string>
  <string name="text_clear_search_history">清除</string>
  <string name="text_who">作者: %s</string>
  <string name="text_no_search_history">没有相关搜索记录</string>
  <!-- info fragment end -->
</resources>
