<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:enabled="true">

        <item
            android:id="@+id/nav_timeline"
            android:enabled="true"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/nav_timeline" />

        <item
            android:id="@+id/nav_girls"
            android:enabled="true"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/nav_girls" />

        <item
            android:id="@+id/nav_favorite"
            android:enabled="true"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/nav_favorite" />

        <item
            android:id="@+id/nav_setting"
            android:enabled="true"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/nav_info" />

    </group>
</menu>