<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/reading_bottom_sheet"
  style="?attr/bottomSheetStyle"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBaseBackground"
  android:orientation="vertical"
  app:behavior_hideable="true"
  app:behavior_peekHeight="0dp"
  app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
  
  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/text_view_share"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:drawablePadding="@dimen/primary_margin"
    android:drawableStart="@drawable/ic_bottom_share"
    android:gravity="center_vertical"
    android:paddingLeft="@dimen/primary_margin"
    android:paddingRight="@dimen/primary_margin"
    android:text="@string/action_share"
    android:textColor="@color/colorPrimaryText" />
  
  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/text_view_copy_link"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:drawablePadding="@dimen/primary_margin"
    android:drawableStart="@drawable/ic_bottom_insert_link"
    android:gravity="center_vertical"
    android:paddingLeft="@dimen/primary_margin"
    android:paddingRight="@dimen/primary_margin"
    android:text="@string/action_copy_link"
    android:textColor="@color/colorPrimaryText"
    android:tint="@color/colorPrimaryText" />
  
  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/text_view_open_with_browser"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:drawablePadding="@dimen/primary_margin"
    android:drawableStart="@drawable/ic_bottom_open_in_browser"
    android:gravity="center_vertical"
    android:paddingLeft="@dimen/primary_margin"
    android:paddingRight="@dimen/primary_margin"
    android:text="@string/action_open_in_browser"
    android:textColor="@color/colorPrimaryText"
    android:tint="@color/colorPrimaryText" />
</LinearLayout>
